Migrating spanner tests to JUnit5 (#1032)
* Migrating

* adding system property

* fixing stuff

* pom.xml changes